--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -13,6 +13,8 @@
     text-align: center;
     margin-right: 1rem;
     width: 23rem;
+    display: inline-block;
+    overflow-x: hidden;
 }
 
 .intro span {
